Listview replaced with Gridview. SharedPreferences replaced with Room Database. Some other minor functionality improved. In-App update implemented.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Notes</string>
     <string name="write_something_here">Write something here</string>
-    <string name="add_note">Add Note</string>
+    <string name="about">About</string>
 
     <!--  Test Ad IDs  -->
     <!--<string name="AdMob_Application_ID">ca-app-pub-3940256099942544~3347511713</string>
